--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.version_code = 1
+    ext.version_name = '1.0'
+
+    ext.compile_sdk_version = 28
+    ext.min_sdk_version = 15
+    ext.target_sdk_version = 28
+
+    ext.app_application_id = 'com.ciompa.cleverlance'
+
     ext.appcompat = '1.1.0-rc01'
     ext.core_runtime = '2.0.1'
     ext.core_ktx = '1.2.0-alpha02'
@@ -12,6 +21,9 @@ buildscript {
     //koin
     ext.koin_android = '2.0.1'
     ext.koin_version = '2.0.1'
+
+    //
+    ext.room = '2.1.0'
 
     //retrofit
     ext.okhttp = '4.0.1'
