--- a/webservice/build.gradle
+++ b/webservice/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
 
+    compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
+        versionCode version_code
+        versionName version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':common')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "androidx.appcompat:appcompat:$appcompat"
@@ -59,8 +60,4 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:$core_testing"
     androidTestImplementation "org.koin:koin-test:$koin_version"
 
-}
-
-repositories {
-    mavenCentral()
 }
