--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,13 @@ buildscript {
 
     ext.app_application_id = 'com.ciompa.cleverlance'
 
-    ext.appcompat = '1.1.0-rc01'
+    //androidx
+    ext.appcompat = '1.0.2'
     ext.core_runtime = '2.0.1'
     ext.core_ktx = '1.2.0-alpha02'
+    ext.constraintlayout = '1.1.3'
+    ext.lifecycle_extensions = '2.0.0'
+    ext.lifecycle_viewmodel_ktx = '2.1.0-beta01'//'2.0.0'
 
     //kotlin
     ext.kotlin_version = '1.3.41'
@@ -20,9 +24,8 @@ buildscript {
 
     //koin
     ext.koin_android = '2.0.1'
-    ext.koin_version = '2.0.1'
 
-    //
+    //room
     ext.room = '2.1.0'
 
     //retrofit
