--- a/common/build.gradle
+++ b/common/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     //koin for Android
     implementation "org.koin:koin-android:$koin_android"
 
+    //koin for Android
+    implementation "org.koin:koin-android:$koin_android"
+
     //test
     testImplementation "junit:junit:$junit"
 
@@ -51,5 +54,5 @@ dependencies {
     androidTestImplementation "androidx.test:runner:$runner"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
     androidTestImplementation "androidx.arch.core:core-testing:$core_testing"
-    androidTestImplementation "org.koin:koin-test:$koin_version"
+    androidTestImplementation "org.koin:koin-test:$koin_android"
 }
