--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -56,10 +56,5 @@ dependencies {
     androidTestImplementation "androidx.test:runner:$runner"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
     androidTestImplementation "androidx.arch.core:core-testing:$core_testing"
-    androidTestImplementation "org.koin:koin-test:$koin_version"
-
-}
-
-repositories {
-    mavenCentral()
+    androidTestImplementation "org.koin:koin-test:$koin_android"
 }
