--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-            android:name=".MyApplication"
+            android:name=".MyApp"
             android:allowBackup="false"
             android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher"
