--- a/di/build.gradle
+++ b/di/build.gradle
@@ -1,18 +1,13 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-
     compileSdkVersion compile_sdk_version
 
-    dataBinding {
-        enabled = true
-    }
 
     defaultConfig {
-        applicationId app_application_id
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
         versionCode version_code
@@ -37,31 +32,20 @@ android {
 dependencies {
     implementation project(path: ':common')
     implementation project(path: ':domain')
-    implementation project(path: ':di')
+    implementation project(path: ':repository')
+    implementation project(path: ':webservice')
+    implementation project(path: ':storage')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-
-    //androidx
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "androidx.core:core-ktx:$core_ktx"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_viewmodel_ktx"
 
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_core"
 
     //koin for Android
     implementation "org.koin:koin-android:$koin_android"
     implementation "org.koin:koin-android-scope:$koin_android"
     implementation "org.koin:koin-android-viewmodel:$koin_android"
 
-    //test
-    testImplementation "junit:junit:$junit"
+    //room
+    implementation "androidx.room:room-runtime:$room"
 
-    //android test
-    androidTestImplementation "androidx.test:runner:$runner"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
-    androidTestImplementation "org.koin:koin-test:$koin_android"
 }
