--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     androidTestImplementation "androidx.test:runner:$runner"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core"
     androidTestImplementation "org.koin:koin-test:$koin_android"
+    androidTestImplementation "androidx.test:rules:$rules"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator"
 }
