--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ buildscript {
     ext.runner = '1.3.0-alpha02'
     ext.espresso_core = '3.3.0-alpha02'
     ext.core_testing = '2.0.1'//'2.1.0-rc01'//
+    ext.rules = '1.3.0-alpha02'
+    ext.uiautomator = '2.2.0'
 
 
     repositories {
