--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
     ext.constraintlayout = '1.1.3'
     ext.lifecycle_extensions = '2.0.0'
     ext.lifecycle_viewmodel_ktx = '2.1.0-beta01'//'2.0.0'
+    ext.material = '1.1.0-alpha09'
 
     //kotlin
     ext.kotlin_version = '1.3.41'
